@@ -1,3 +1,7 @@
+2007-10-08  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Restored datetime kwarg for backward compatibility
+
 2007-09-28  Sébastien Sablé  <sable@users.sourceforge.net>
 
 	* Sybase.py: Corrected bug on ct_cursor with parameters
